--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 
     <title>Calendar</title>
 </head>
@@ -34,6 +34,6 @@
     <div class="calendar__dates" id="dates"></div>
 </div>
 
-<script src="js/scripts.js"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
